crates/k-rust/src/parser/snapshots/kore_rs__parser__pattern__tests__bottom_floor_and_nu.snap
---
source: crates/k-rust/src/parser/pattern.rs
description: "KORE pattern:\n\n\\nu{}(\n    @X:SortSet{},\n    \\floor{SortSet{}, SortBool{}}(\\bottom{SortSet{}}())\n)\n"
---
Nu {
    variable: Variable {
        kind: Set,
        name: "@X",
        sort: Application {
            name: "SortSet",
            arguments: [],
        },
    },
    body: Floor {
        operand_sort: Application {
            name: "SortSet",
            arguments: [],
        },
        result_sort: Application {
            name: "SortBool",
            arguments: [],
        },
        argument: Bottom {
            sort: Application {
                name: "SortSet",
                arguments: [],
            },
        },
    },
}
